[package]
name = "simlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.5.0"
anyhow = "1.0.38"
serde = { version = "1.0.117", features = ["derive"] }
linfa = "0.6.0"
linfa-bayes = "0.6.0"
